helm/kube-prometheus-stack/grafana-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/ingressgateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
